# pydata-sphinx-test

./: .gitignore  LICENSE.md  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/content/: getting_started.rst
docs/content/api/: test_package.rst
docs/content/basic/: big_picture.rst
examples/: README.txt  plot_example.py
test_package/: __init__.py  simple.py
